--- a/index.html
+++ b/index.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Static Website</title>
+    <title>Pixel Perfect Designs: Your Creative Partner for Success</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Welcome to my static website!</h1>
+    <div id="main">
+        <div id="section_one">
+
+            <div id="header">
+                <div id="nav">
+                        <a href="#about">About</a>
+                        <a href="#services">Services</a>
+                        <a id="logo" href="/"></a>
+                        <a href="#gallery">Gallery</a>
+                        <a href="#contact">Contact</a>
+                </div>
+            </div>
+            <div id="hero-content" class="scroll-reveal">
+                <h1>Your Creative Partner for Success</h1>
+                <a href="#contact">Contact</a>
+            </div>
+            <div id="foreword" class="scroll-reveal">
+                <h3>Innovation through speed</h3>
+                <p>Experience the future of design with Pixel Perfect Designs. Leveraging cutting-edge tech like
+                    Artificial Intelligence, we deliver solutions at unmatched speeds, propelling your business to new
+                    heights.</p>
+            </div>
+            <div id="about">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                    <p>Social media management plays a vital role in engaging with the audience, building a community
+                        around the brand, and increasing visibility. A consistent and strategic social media presence
+                        can foster meaningful relationships with customers.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="img/placeholder.png" alt="">
+                    </div>
+                    <p>Website design is crucial as it serves as a virtual storefront for businesses. A well-designed
+                        and user-friendly website can attract and retain customers, effectively communicate the brand’s
+                        message, and drive conversions.</p>
+                </div>
+            </div>
+            <div id="services">
+                <div class="col">
+                    <h1>Our Services</h1>
+                    <p>At Pixel Perfect Designs, we offer a comprehensive range of digital design services. We are dedicated to building a strong online identity for businesses and helping them achieve remarkable success in the digital landscape. Contact us today to elevate your brand and business!</p>
+                </div>
+                <div class="col">
+                    <div id="service-grid" class="scroll-reveal">
+                        <div class="card">
+                            <h3>Website Design</h3>
+                            <p>Tailor-made website design services, creating unique and visually appealing websites that
+                                reflect the brand’s identity and resonate with the target audience.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Brand identity Design</h3>
+                            <p>Craft a captivating brand identity that reflects your values and connects with your
+                                audience. From memorable logos to cohesive visuals, we’ll make your brand stand out.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h3>Search Engine Optimization</h3>
+                            <p>We optimize our websites for search engines, ensuring higher visibility in search results
+                                and driving organic traffic to the client’s website.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Content Creation</h3>
+                            <p>High-quality and relevant content for websites, social media, blogs, and other marketing
+                                channels to attract and engage the target audience.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="gallery"></div>
+        </div>
+
+        <div id="contact"></div>
+        <div id="footer">© Pixel Perfect Designs | All Rights Reserved.</div>
+    </div>
+
+    <script src="js/app.js"></script>
 </body>
+
 </html>
