--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             <div id="header">
                 <div id="nav">
                         <a href="#about">About</a>
-                        <a href="#services">Services</a>
                         <a id="logo" href="/"></a>
-                        <a href="#gallery">Gallery</a>
-                        <a href="#contact">Contact</a>
+                        <a href="#services">Services</a>
                 </div>
             </div>
             <div id="hero-content" class="scroll-reveal">
@@ -35,7 +33,7 @@
             <div id="about">
                 <div class="card">
                     <div class="card-image">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/phone.jpeg" alt="">
                     </div>
                     <p>Social media management plays a vital role in engaging with the audience, building a community
                         around the brand, and increasing visibility. A consistent and strategic social media presence
@@ -43,7 +41,7 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="img/placeholder.png" alt="">
+                        <img src="img/cam.jpeg" alt="">
                     </div>
                     <p>Website design is crucial as it serves as a virtual storefront for businesses. A well-designed
                         and user-friendly website can attract and retain customers, effectively communicate the brand’s
